--- a/main.html
+++ b/main.html
@@ -8,6 +8,32 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<table>
+		<thead>
+		<tr>
+			<th>Roll numbers</th>
+			<th>Names</th>
+		</tr>
+		</thead>
+		<tbody>
+		<tr>
+			<td></td>
+			<td></td>
+		</tr>
+		<tr>
+			<td></td>
+			<td></td>
+		</tr>
+		</tbody>
+	</table>
+	<div class="media">
+		<h1>List of medias</h1>
+		<ol><li><img src="https://picsum.photos/id/123/200/300" alt="First image"></li>
+		<li><video src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4">
+			<source="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4">
+		</video></li>
+		<li><audio src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg"></audio></li></ol>
+	</div>
     <script type="text/javascript" src="./script.js">
 </script>
 
