--- a/main.html
+++ b/main.html
@@ -32,7 +32,7 @@
 		<li><video src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4">
 			<source="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4">
 		</video></li>
-		<li><audio src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg"></audio></li></ol>
+		<li><audio controls src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg"></audio></li></ol>
 	</div>
     <script type="text/javascript" src="./script.js">
 </script>
