--- a/main.html
+++ b/main.html
@@ -30,7 +30,7 @@
 		<h1>List of medias</h1>
 		<ol><li><img src="https://picsum.photos/id/123/200/300" alt="First image"></li>
 		<li><video src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4">
-			<source="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4">
+			<source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4">
 		</video></li>
 		<li><audio controls src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg"></audio></li></ol>
 	</div>
