--- a/main.html
+++ b/main.html
@@ -11,8 +11,8 @@
 	<table>
 		<thead>
 		<tr>
-			<th>Roll numbers</th>
-			<th>Names</th>
+			<tr>Roll numbers</tr>
+			<tr>Names</tr>
 		</tr>
 		</thead>
 		<tbody>
