--- a/main.html
+++ b/main.html
@@ -11,11 +11,15 @@
 	<table>
 		<thead>
 		<tr>
-			<tr>Roll numbers</tr>
-			<tr>Names</tr>
+			<th>Roll numbers</th>
+			<th>Names</th>
 		</tr>
 		</thead>
 		<tbody>
+		<tr>
+			<td></td>
+			<td></td>
+		</tr>
 		<tr>
 			<td></td>
 			<td></td>
